<resources>
    <string name="app_name">SuperFit</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="repeat_code">RepeatCode</string>

    <!-- Sign Up Fragment -->
    <string name="duplicate_user">Пользователь уже существует.</string>

    <string name="validation_error_empty_fields">Все поля должны быть заполнены.</string>
    <string name="validation_error_mismatched_passwords">Пароли не совпадают.</string>
    <string name="validation_error_invalid_email">Некорректный email.</string>
    <string name="validation_error_code_contains_zero">Пароль не может содержать цифру 0.</string>
    <string name="validation_error_invalid_code_length">Длина пароля должна быть равна 4.</string>
    <string name="sign_in_failed">Неверный логин или пароль.</string>

    <string name="validation_empty_username">Пожалуйста, введите логин пользователя.</string>

    <!-- Main Fragment -->
    <string name="my_body">My body</string>
    <string name="details">Details</string>
    <string name="last_exercises">Last exercises</string>
    <string name="see_all">See all</string>
    <string name="sign_out">Sign Out</string>

    <!-- Exercises Fragment -->
    <string name="exercises">Exercises</string>

    <string name="push_ups_title">Push-Ups</string>
    <string name="push_ups_description">Push-ups exercise the pectoral muscles, triceps, and anterior deltoids.</string>
    <string name="plank_title">Plank</string>
    <string name="plank_description">The plank strengthens the abdominals, back and shoulders.</string>
    <string name="squats_title">Squats</string>
    <string name="squats_description">Сonsidered a vital exercise for increasing the strength and size of the lower body.</string>
    <string name="crunch_title">Crunch </string>
    <string name="crunch_description">It involves the entire abs, but primarily it works the rectus abdominis muscle.</string>
    <string name="running_title">Running</string>
    <string name="running_description">It develops endurance, strengthens the legs and the cardiovascular system.</string>

    <string name="unknown_error">Произошла неизвестная ошибка.</string>
    <string name="http_error">Произошла ошибка при обращении к серверу.</string>
    <string name="network_error">Не удается подключиться к серверу.</string>

    <!-- Dialog Fragment -->
    <string name="positive_button_dialog_default">OK</string>
    <string name="preference_file_key">shared</string>

    <string name="exercise_dialog_title">Start the training?</string>
    <string name="exercise_dialog_positive_button">GO!</string>
    <string name="exercise_dialog_negative_button">LATER</string>
    <string name="exercise_dialog_message">You need to repeat the exercise %1$d times. Are you ready?</string>

    <string name="finish">Finish</string>
    <string name="need_to_do">NEED TO DO</string>

    <string name="times_left">TIMES LEFT</string>
    <string name="seconds_left">SECONDS LEFT</string>
    <string name="meters_passed">METERS PASSED</string>
    <string name="go_home">Go home</string>
    <string name="un_success_times_left">%1$d times are missing. You can do it better!</string>

    <!-- Sign In Code Fragment -->
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="fourth">4</string>
    <string name="fifth">5</string>
    <string name="sixth">6</string>
    <string name="seventh">7</string>
    <string name="eighth">8</string>
    <string name="ninth">9</string>

    <!-- Running Fragment -->
    <string name="no_step_sensor">No Step sensor detected on this device</string>
    <string name="permission_granted">StepCounter sensor permission is granted</string>
    <string name="deny_permission">You have denied permissions permanently. " +
                            "You can change it in app settings.\n\n" +
                            "Would you like to open app settings?</string>

    <string name="open_positive_button">Open</string>
    <string name="title_dialog">Permission denied</string>
    <string name="deny_forever">Permissions are denied forever</string>

    <string name="title_dialog_default">Error</string>

    <!-- My body Fragment -->
    <string name="weight">%1$d kg</string>
    <string name="height">%1$d cm</string>
    <string name="edit">Edit</string>
    <string name="my_progress">My Progress</string>
    <string name="train_progress">Train progress</string>
    <string name="statistics">Statistics</string>
    <string name="undefined">Undefined</string>

    <string name="cancel">CANCEL</string>
    <string name="change">CHANGE</string>
    <string name="edit_parameter_dialog_title">Change your %1$s</string>
    <string name="weight_simple">weigth</string>
    <string name="height_simple">height</string>
    <string name="dialog_hint">New value</string>
    <string name="weight_label">Weight</string>
    <string name="height_label">Height</string>

    <string name="save">Save</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>


    <string name="error_dialog">Пожалуйста, введите значение</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">april</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
</resources>