<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.running.RunningFragment">

    <Button
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/button_finish_background"
        android:clickable="true"
        android:enabled="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/runningTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/running_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/runningProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:indeterminate="false"
        android:max="1500"
        android:progress="1500"
        app:indicatorColor="@color/purple"
        app:indicatorSize="216dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runningTitleTextView"
        app:trackThickness="4dp" />

    <TextView
        android:id="@+id/runningTimesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintBottom_toBottomOf="@+id/runningProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/runningProgressBar"
        app:layout_constraintStart_toStartOf="@+id/runningProgressBar"
        app:layout_constraintTop_toTopOf="@+id/runningProgressBar" />

    <TextView
        android:id="@+id/runningMetersPassedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/meters_passed"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/runningProgressBar"
        app:layout_constraintStart_toStartOf="@+id/runningProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/runningTimesTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>